--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ code {
 }
 </style>
 
-<body class="egp-h-screen egp-flex text-xs egp-sm:text-sm egp-relative egp-overflow-hidden egp-antialiased">
+<body class="h-screen flex text-xs sm:text-sm relative overflow-hidden antialiased">
     <!-- Overlay for small screens -->
     <div class="egp-sidebar-overlay"></div>
     <!-- Sidebar -->
@@ -58,7 +58,7 @@ code {
             </li>
             <li class="egp-sidebar-section-heading" data-section-heading="CORE CONCEPT"></li>
             <li>
-                <a href="" class="egp-sidebar-link">
+                <a href="./docs/usage.html" class="egp-sidebar-link">
                     <span class="egp-sidebar-link-icon"><i class="bi bi-rocket-takeoff"></i></span>
                     <span class="egp-sidebar-link-text">Usage</span>
                 </a>
@@ -110,21 +110,36 @@ code {
     </nav>
     <!-- Main content -->
     <div class="egp-main-content">
-        <div class="py-2 sticky top-0 border-b border-gray-200">
+        <!-- Sticky Topbar -->
+        <div class="bg-white py-2 sticky top-0 border-b border-gray-200 z-50">
             <div class="max-w-7xl w-full mx-auto px-4 py-2">
-                <div class="flex gap-2 items-center">
-                    <!-- Toggle Button -->
-                    <button class="egp-sidebar-toggle bg-gray-600 hover:bg-gray-700 text-white font-semibold px-2.5 py-2">
-                        <i class="bi bi-list"></i>
-                    </button>
-                    <h1 class="text-2xl font-semibold text-gray-700">EdgePane Docs</h1>
+                <div class="flex gap-4 items-center justify-between">
+                    <div class="flex gap-2 items-center">
+                        <!-- Toggle Button -->
+                        <button class="egp-sidebar-toggle bg-gray-600 hover:bg-gray-700 text-white font-semibold px-2.5 py-2">
+                            <i class="bi bi-list"></i>
+                        </button>
+                        <h1 class="text-base md:text-2xl font-semibold text-gray-700">EdgePane Documentation</h1>
+                    </div>
+                    <!-- GitHub -->
+                    <a href="https://github.com/EZeX377/EdgePane" target="_blank">
+                        <img src="https://img.shields.io/badge/View_on_GitHub-181717?style=for-the-badge&logo=github&logoColor=white" alt="View on GitHub" class="rounded hidden md:block">
+                        <img src="https://img.shields.io/badge/-181717?style=for-the-badge&logo=github&logoColor=white" alt="View on GitHub" class="rounded md:hidden">
+                    </a>
                 </div>
             </div>
         </div>
         <div class="max-w-7xl w-full mx-auto text-gray-700 px-4 py-12">
             <!-- Page Content -->
             <p class="uppercase font-medium mb-2 text-gray-500">Introduction</p>
-            <p class="text-3xl font-semibold mb-4">Getting Started with EdgePane</p>
+            <p class="text-3xl font-semibold mb-6">Getting Started with EdgePane</p>
+            <!-- Badges -->
+            <div class="flex flex-wrap gap-2 mb-6">
+                <img src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white" alt="HTML5 Badge" class="rounded">
+                <img src="https://img.shields.io/badge/CSS3-00A63E?style=for-the-badge&logo=css3&logoColor=white" alt="CSS3 Badge" class="rounded">
+                <img src="https://img.shields.io/badge/jQuery-0769AD?style=for-the-badge&logo=jquery&logoColor=white" alt="jQuery Badge" class="rounded">
+                <img src="https://img.shields.io/badge/GitHub-181717?style=for-the-badge&logo=github&logoColor=white" alt="GitHub Badge" class="rounded">
+            </div>
             <p class="mb-4 text-base tracking-wide leading-loose">
                 <strong>EdgePane</strong> is a lightweight, responsive, and highly customizable sidebar component designed to streamline navigation in modern web applications.
                 It provides an intuitive interface for creating collapsible menus, multi-level dropdowns, and responsive layouts without relying on heavy frameworks.
